# All_my_python_works

./: .gitignore
AGRICULTURE_CHART_PYTHON/: agriculture_dashboard.ipynb  main.py  pyproject.toml
Data_cleaning/: classwk.ipynb  clean_school_system.csv  pyproject.toml
Data_reshaping_cleaning/: data_reshaping.ipynb  data_reshaping1.ipynb  data_reshaping2.ipynb  main.py  pyproject.toml
Python_Class/: pyproject.toml  test.ipynb
chatbox/: pyproject.toml
chatbox1/: api.py  main.py  package-lock.json  package.json  (+1 more)
chatbox4/: .env.example  .gitignore  api.py  chunk_dataset.py  clean_dataset.py  embed_chunks.py  finance_rag_chunks_fixed.json  finance_rag_chunks_row.json  finance_rag_chunks_semantic.json  finance_rag_chunks_sliding_window_w3_s1.json  finance_rag_clean.csv  main.py  pyproject.toml  test_queries_temp.py  vector_store.py
chatbox4/frontend/: .yarnrc  index.html  package-lock.json  package.json
chatbox4/frontend/src/: App.tsx  index.css
chatbox4/frontend/src/components/: ChatPanel.tsx
chatbox4/frontend/src/components/landing/: AboutSection.tsx  AlertsSection.tsx  AnalyticsSection.tsx  ChatbotCTA.tsx  CommunityImpact.tsx  ContactFooter.tsx  FAQ.tsx  FeaturesSection.tsx  FraudTypes.tsx  Hero.tsx  HowItWorks.tsx  Navbar.tsx  Overlays.tsx  PhoneChecker.tsx  ResourcesSection.tsx  ScreenshotAnalysis.tsx  Testimonials.tsx  TrustSection.tsx  index.ts
chatbox4/frontend/src/hooks/: index.ts  useCounterAnimation.ts  useScrollAnimation.ts  useTheme.ts
chatbox4/frontend/src/pages/: ChatPage.tsx  LandingPage.tsx
chatbox4/frontend/src/styles/: landing.css
(+51 files in other folders)
